aux_source_directory(./ trt_dbnet_src)
add_library(${TRT_DBNET_LIBRARY_NAME} SHARED ${trt_dbnet_src})
set(TRT_LIBS nvinfer nvparsers nvonnxparser)
target_link_libraries(${TRT_DBNET_LIBRARY_NAME} PRIVATE ${TRT_LIBS})
target_link_libraries(${TRT_DBNET_LIBRARY_NAME} PRIVATE cudart)
target_link_libraries(${TRT_DBNET_LIBRARY_NAME} PRIVATE ${OpenCV_LIBS})